--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+*{
+    margin: 0px;
+    padding: 0px;
+    
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(92,240,116,1) 60%, rgba(0,212,255,1) 100%);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20vh;
+    
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.title {
+    text-align: center;
 }
+input{
+    padding: 10px;
+    border-radius: 20px;
 
-.App-link {
-  color: #61dafb;
 }
+button {
+    padding: 10px;
+    background-color: white;
+    color: black;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+button:hover{
+    background-color: black;
+    color: white;
+    transition: .2s ;
+    box-shadow:  4px 3px 20px black;
+}
+.container {
+    border: 3px solid black;
+    border-radius: 10px;
+    padding: 5%;
+    margin: 20px;
+    box-shadow:  10px 5px 30px white;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.inpCity{
+    margin: 30px;
 }
